# graph-toolkit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Graph.cpp  Graph.h  README.md  main.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  linter.sh
docs/: API.md
include/: Algorithms.h  Graph.h
src/: Algorithms.cpp  Graph.cpp
tests/: algorithms_test.cpp  graph_test.cpp  main.cpp  mst_benchmark_test.cpp
